Tue Feb  4 17:09:18 2003  Jonathan Blandford  <jrb@redhat.com>

	* Release 2.2.0.1

2003-02-03  Kjartan Maraas  <kmaraas@gnome.org>

	* gnome-theme-info.c (read_meta_theme): Fix a glaring bug
	that caused the theme descriptions etc not to be localised.
	Fix from Dmitry G. Mastrukov <dmitry@taurussoft.org>. Fixes
	#104296
	
2003-01-27  Bastien Nocera  <hadess@hadess.net>

	* gnome-theme-test.c: (main): C ninety what ?

Tue Jan 21 01:15:14 2003  Jonathan Blandford  <jrb@gnome.org>

	* Release 2.2.0

Sun Jan 19 02:14:35 2003  Jonathan Blandford  <jrb@gnome.org>

	* gnome-theme-test.c (main): add more debugging output.

Thu Jan 16 15:51:33 2003  Jonathan Blandford  <jrb@redhat.com>

	* gnome-theme-test.c: new little test program for helping people
	debug their installation.

Thu Jan 16 02:41:09 2003  Jonathan Blandford  <jrb@gnome.org>

	* Release 2.1.7

Wed Jan 15 20:16:21 2003  Jonathan Blandford  <jrb@redhat.com>

	* gnome-theme-info.c (remove_data_from_hash_by_name): call
	correctly in all the right places.

Mon Jan 13 15:04:47 2003  Jonathan Blandford  <jrb@redhat.com>

	* gnome-theme-info.c: rewrote to handle fam more correctly.  Still
	a little broken in places, but much, much better than before.

2003-01-10  Jody Goldberg <jody@gnome.org>

	* Release 2.1.6

2002-12-28  Seth Nickell  <snickell@stanford.edu>

	* Makefile.am:
	* gnome-theme-info.c: (gnome_theme_info_init):

	Update icon theme directory code so it looks in
	PREFIX/share/icons rather than PREFIX/share/theme,
	as per freedesktop icon spec.

2002-12-18  Jody Goldberg <jody@gnome.org>

	* Release 2.1.5

Fri Dec  6 16:13:54 2002  Jonathan Blandford  <jrb@redhat.com>

	* gnome-theme-info.c (top_theme_dir_changed_callback): I know C.
	Really, I do.

2002-11-23  Jody Goldberg <jody@gnome.org>

	* Release 2.1.3

Tue Nov  5 15:48:33 2002  Jonathan Blandford  <jrb@gnome.org>

	* gnome-theme-info.c: Change the file format a bunch.

2002-11-02  Jody Goldberg <jody@gnome.org>

	* Release 2.1.2
